Converted project to sass

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <header>
+      <nav>
+        <p>&#9776; MENU</p>
+      </nav>
+
       <div class="search clearfix">
         <form class="search__form" action="index.html" method="POST">
           <input class="search__form__input" type="text" id="search" name="search">
