Work on dropdown menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
   <body>
     <header>
       <nav>
-        <p>&#9776; MENU</p>
+        <div id="mainmenu">
+          <p>&#9776; MENU</p>
+        </div>
+        <ul id="menu-dropdown">
+          <li>Spotify albums</li>
+          <li>Starwars</li>
+          <li>Github project</li>
+        </ul>
       </nav>
 
       <div class="search clearfix">
@@ -150,6 +157,7 @@
     <script type="text/javascript" src="js/views.js"></script>
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/gallery.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
   </body>
 
 </html>
