Work on menu selection

--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
           <p>&#9776; MENU</p>
         </div>
         <ul id="menu-dropdown">
-          <li>Spotify albums</li>
-          <li>Starwars</li>
-          <li>Github project</li>
+          <li id="spotify">Spotify albums</li>
+          <li id="starwars">Starwars</li>
+          <li id="github">Github project</li>
         </ul>
       </nav>
+
+      <div class="search-selection">
+        <h3>Currently searching for: <span id="search-value">Please select</span></h3>
+      </div>
 
       <div class="search clearfix">
         <form class="search__form" action="index.html" method="POST">
