--- a/index.html
+++ b/index.html
@@ -39,113 +39,113 @@
 
       <main>
         <div class="pictures">
-          <ul>
-            <li>
-              <a href="img/01.jpg">
-                <img src="img/Thumbnails/01.jpg" 
-                     alt="I love hay bales. Took this snap on a drive through the countryside past some straw fields."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/02.jpg">
-                <img src="img/Thumbnails/02.jpg" 
-                     alt="The lake was so calm today. We had a great view of the snow on the mountains from here."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/03.jpg">
-                <img src="img/Thumbnails/03.jpg" 
-                     alt="I hiked to the top of the mountain and got this picture of the canyon and trees below."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/04.jpg">
-                <img src="img/Thumbnails/04.jpg" 
-                     alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/05.jpg">
-                <img src="img/Thumbnails/05.jpg" 
-                     alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/06.jpg">
-                <img src="img/Thumbnails/06.jpg" 
-                     alt="Fall is coming, I love when the leaves on the trees start to change color."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/07.jpg">
-                <img src="img/Thumbnails/07.jpg" 
-                     alt="I drove past this plantation yesterday, everything is so green!"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/08.jpg">
-                <img src="img/Thumbnails/08.jpg" 
-                     alt="My summer vacation to the Oregon Coast. I love the sandy dunes!"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/09.jpg">
-                <img src="img/Thumbnails/09.jpg" 
-                     alt="We enjoyed a quiet stroll down this countryside lane."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/10.jpg">
-                <img src="img/Thumbnails/10.jpg" 
-                     alt="Sunset at the coast! The sky turned a lovely shade of orange."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/11.jpg">
-                <img src="img/Thumbnails/11.jpg" 
-                     alt="I did a tour of a cave today and the view of the landscape below was breathtaking."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="img/12.jpg">
-                <img src="img/Thumbnails/12.jpg" 
-                     alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/watch?v=Wnr8LRO7CiA">
-                <img src="img/Thumbnails/treehouse-youtube.jpg" 
-                     alt="<p>Join <a href='http://trhou.se/148kMOY'>Treehouse</a> today, start your free trial and become our next success story!.</p>"
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/watch?v=Jl3M3rs-j-A">
-                <img src="img/Thumbnails/DB10-youtube.jpg" 
-                     alt="James Bond Spectre stunt driver Mark Higgins unveils the Aston Martin DB10 and tells Eastlife.co.uk magazine about life as a daredevil. Interviewed at the Grange Aston Martin dealership in Brentwood Essex."
-                >
-              </a>
-            </li>
-            <li>
-              <a href="https://www.mixcloud.com/CraigCharles/the-craig-charles-mystery-mix/">
-                <img src="img/Thumbnails/craig-charles.jpg" 
-                     alt="This is a mystery mix from your favourite funkster, Craig Charles! Get some funk in your trunk!"
-                >
-              </a>
-            </li>
-          </ul>
+          <!--<ul>-->
+            <!--<li>-->
+              <!--<a href="img/01.jpg">-->
+                <!--<img src="img/Thumbnails/01.jpg" -->
+                     <!--alt="I love hay bales. Took this snap on a drive through the countryside past some straw fields."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/02.jpg">-->
+                <!--<img src="img/Thumbnails/02.jpg" -->
+                     <!--alt="The lake was so calm today. We had a great view of the snow on the mountains from here."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/03.jpg">-->
+                <!--<img src="img/Thumbnails/03.jpg" -->
+                     <!--alt="I hiked to the top of the mountain and got this picture of the canyon and trees below."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/04.jpg">-->
+                <!--<img src="img/Thumbnails/04.jpg" -->
+                     <!--alt="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/05.jpg">-->
+                <!--<img src="img/Thumbnails/05.jpg" -->
+                     <!--alt="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/06.jpg">-->
+                <!--<img src="img/Thumbnails/06.jpg" -->
+                     <!--alt="Fall is coming, I love when the leaves on the trees start to change color."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/07.jpg">-->
+                <!--<img src="img/Thumbnails/07.jpg" -->
+                     <!--alt="I drove past this plantation yesterday, everything is so green!"-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/08.jpg">-->
+                <!--<img src="img/Thumbnails/08.jpg" -->
+                     <!--alt="My summer vacation to the Oregon Coast. I love the sandy dunes!"-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/09.jpg">-->
+                <!--<img src="img/Thumbnails/09.jpg" -->
+                     <!--alt="We enjoyed a quiet stroll down this countryside lane."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/10.jpg">-->
+                <!--<img src="img/Thumbnails/10.jpg" -->
+                     <!--alt="Sunset at the coast! The sky turned a lovely shade of orange."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/11.jpg">-->
+                <!--<img src="img/Thumbnails/11.jpg" -->
+                     <!--alt="I did a tour of a cave today and the view of the landscape below was breathtaking."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="img/12.jpg">-->
+                <!--<img src="img/Thumbnails/12.jpg" -->
+                     <!--alt="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="https://www.youtube.com/watch?v=Wnr8LRO7CiA">-->
+                <!--<img src="img/Thumbnails/treehouse-youtube.jpg" -->
+                     <!--alt="<p>Join <a href='http://trhou.se/148kMOY'>Treehouse</a> today, start your free trial and become our next success story!.</p>"-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="https://www.youtube.com/watch?v=Jl3M3rs-j-A">-->
+                <!--<img src="img/Thumbnails/DB10-youtube.jpg" -->
+                     <!--alt="James Bond Spectre stunt driver Mark Higgins unveils the Aston Martin DB10 and tells Eastlife.co.uk magazine about life as a daredevil. Interviewed at the Grange Aston Martin dealership in Brentwood Essex."-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+              <!--<a href="https://www.mixcloud.com/CraigCharles/the-craig-charles-mystery-mix/">-->
+                <!--<img src="img/Thumbnails/craig-charles.jpg" -->
+                     <!--alt="This is a mystery mix from your favourite funkster, Craig Charles! Get some funk in your trunk!"-->
+                <!--&gt;-->
+              <!--</a>-->
+            <!--</li>-->
+          <!--</ul>-->
         </div>
       </main>
 
@@ -158,10 +158,11 @@
     <!-- // <script type="text/javascript" src="js/main.js"></script> -->
     <!-- // <script type="text/javascript" src="js/search.js"></script> -->
 
-    <script type="text/javascript" src="js/views.js"></script>
-    <script type="text/javascript" src="js/controllers.js"></script>
-    <script type="text/javascript" src="js/gallery.js"></script>
+    <!--<script type="text/javascript" src="js/views.js"></script>-->
+    <!--<script type="text/javascript" src="js/controllers.js"></script>-->
+    <!--<script type="text/javascript" src="js/gallery.js"></script>-->
     <script type="text/javascript" src="js/nav.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 
 </html>
