Getting overlay to work

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
     <!--<script type="text/javascript" src="js/gallery.js"></script>-->
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
+  <footer>
+    (C) Ben Attenborough
+  </footer>
   </body>
 
 </html>
