Adding proper search form

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
 
       <div class="search-selection">
         <h3>Currently searching for: <span id="search-value">Please select</span></h3>
+        <label for="api">API:</label>
+        <select id="api" name="user_job">
+          <optgroup label="spotify">
+            <option value="singles">Singles</option>
+            <option value="albums">Albums</option>
+            <option value="artists">Artists</option>
+          </optgroup>
+          <optgroup label="library">
+            <option value="title">Titles</option>
+            <option value="author">Authors</option>
+          </optgroup>
+        </select>
       </div>
 
       <div class="search clearfix">
