Change book link to https

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!--</nav>-->
 
       <div class="search-selection">
-        <h3>Currently searching for: <span id="search-value">Please select</span></h3>
+        <h3>Select your search criteria:<span id="search-value"></span></h3>
         <label for="api">API:</label>
         <select id="api" name="user_job">
             <option value="spotify">Spotify</option>
