Better position of images using background images

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+  <div id="wrap">
     <header>
       <!--<nav>-->
         <!--<div id="mainmenu">-->
@@ -48,10 +49,14 @@
         </div>
       </main>
 
-      <footer>
-      </footer>
-
     </div>
+  </div>
+  <div id="sticky-footer">
+    (C) Ben Attenborough
+  </div>
+
+  </body>
+  <footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="inc/pictures.js"></script>
     <!-- // <script type="text/javascript" src="js/main.js"></script> -->
@@ -62,9 +67,5 @@
     <!--<script type="text/javascript" src="js/gallery.js"></script>-->
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
-  <footer>
-    (C) Ben Attenborough
   </footer>
-  </body>
-
 </html>
