Work on improving js linking

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="utf-8">
     <title>Interactive Photo Galler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">-->
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
+    <!--<script type="text/javascript" src="path/to/script1.js" async></script>-->
   </head>
 
   <body>
@@ -48,12 +49,6 @@
   <footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script type="text/javascript" src="inc/pictures.js"></script>
-    <!-- // <script type="text/javascript" src="js/main.js"></script> -->
-    <!-- // <script type="text/javascript" src="js/search.js"></script> -->
-
-    <!--<script type="text/javascript" src="js/views.js"></script>-->
-    <!--<script type="text/javascript" src="js/controllers.js"></script>-->
-    <!--<script type="text/javascript" src="js/gallery.js"></script>-->
     <script type="text/javascript" src="js/nav.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </footer>
