--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic' rel='stylesheet'
           type='text/css'>
     <link rel="stylesheet" href="css/style.css">
-    <!--<script type="text/javascript" src="js/app.min.js" async></script>-->
-    <script type="text/javascript" src="js/jquery-3.1.1.min.js" defer></script>
-    <script type="text/javascript" src="js/api.js" defer></script>
 </head>
 
 <body>
@@ -42,6 +39,7 @@
 <div id="sticky-footer">
     (C) Ben Attenborough
 </div>
+<script type="text/javascript" src="js/app.min.js" async></script>
 </body>
 
 </html>
