Split out spotify and library item data filters

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <div id="sticky-footer">
     (C) Ben Attenborough
 </div>
-<script type="text/javascript" src="js/app.min.js" async></script>
+<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="js/api.js"></script>
 </body>
 
 </html>
